hphp/test/slow/enum_class/enum_class_this.php.expectf
Fatal error: `$this` cannot be used inside an enum class in %s/enum_class_this.php on line 8
